Implement proxy server for SOA front end

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
-  <div id="root"></div>
-  <script src="bundle.js"></script>
-</body>
+  <body>
+    <div id="overview"></div>
+    <hr />
+    <div id="qanda"></div>
+    <hr />
+    <div id="ratings-and-reviews"></div>
+    <script src="http://i-o-silver.us-west-2.elasticbeanstalk.com/bundle.js"></script>
+    <script src="http://iosilverqanda-env.eba-75si8kt4.us-west-1.elasticbeanstalk.com/bundle.js"></script>
+    <script src="http://iosilverratingsandreviews-env.eba-5mfur5xq.us-west-2.elasticbeanstalk.com/bundle.js"></script>
+  </body>
 </html>
